<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.tellyouwhat.activityrecognition.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_probably_activity"
        android:text="@string/activity_probably_are"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="22dp">

        <TableRow
            android:id="@+id/title_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/title"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/activity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/percentage"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/downstairs_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/downstairs_title"
                android:text="@string/downstairs"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/downstairs_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/jogging_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/jogging_title"
                android:text="@string/jogging"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView android:id="@+id/jogging_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/sitting_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/sitting_title"
                android:text="@string/sitting"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView android:id="@+id/sitting_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/standing_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/standing_title"
                android:text="@string/standing"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView android:id="@+id/standing_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/upstairs_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/upstairs_title"
                android:text="@string/upstairs"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView android:id="@+id/upstairs_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/walking_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/walking_title"
                android:text="@string/walk"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView android:id="@+id/walking_prob"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
